--- a/server/package.json
+++ b/server/package.json
@@ -9,6 +9,7 @@
   },
   "author": "Racheal Appiah-kubi",
   "license": "ISC",
+  "type": "module",
   "dependencies": {
     "cors": "^2.8.5",
     "express": "^4.18.2",
