--- a/API/Dockerfile
+++ b/API/Dockerfile
@@ -1,9 +1,9 @@
 # Use an official Python runtime as a parent image
-FROM python:3.10-alpine3.18
+FROM python:3.10.11
 
 #Install dependencies from requirements.txt
 COPY requirements.txt /tmp/requirements.txt
-RUN python -m pip install -r /tmp/requirements.txt
+RUN python -m pip install --timeout 300000 -r /tmp/requirements.txt
 
 # Copy the current directory contents into the container at /app
 COPY . /app
